[feat] service nodes health check
