# docs/swagger.json
@@ -5,7 +5,7 @@
         "title": "Go Micro Dashboard",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {},
-        "version": "1.2.0"
+        "version": "1.3.0"
     },
     "basePath": "/",
     "paths": {
@@ -112,6 +112,56 @@
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/client.callRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "schema": {
+                            "type": "object"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/client/healthcheck": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "tags": [
+                    "Client"
+                ],
+                "operationId": "client_healthCheck",
+                "parameters": [
+                    {
+                        "description": "request",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/client.healthCheckRequest"
                         }
                     }
                 ],
@@ -278,6 +328,45 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/registry.getServiceHandlersResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/registry/service/nodes": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "tags": [
+                    "Registry"
+                ],
+                "operationId": "registry_getNodes",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/registry.getNodeListResponse"
                         }
                     },
                     "400": {
@@ -506,6 +595,28 @@
                 }
             }
         },
+        "client.healthCheckRequest": {
+            "type": "object",
+            "required": [
+                "address",
+                "service",
+                "version"
+            ],
+            "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "service": {
+                    "type": "string"
+                },
+                "timeout": {
+                    "type": "integer"
+                },
+                "version": {
+                    "type": "string"
+                }
+            }
+        },
         "client.publishRequest": {
             "type": "object",
             "required": [
@@ -518,6 +629,17 @@
                 },
                 "topic": {
                     "type": "string"
+                }
+            }
+        },
+        "registry.getNodeListResponse": {
+            "type": "object",
+            "properties": {
+                "services": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/registry.registryServiceNodes"
+                    }
                 }
             }
         },
@@ -589,6 +711,9 @@
                 },
                 "response": {
                     "$ref": "#/definitions/registry.registryValue"
+                },
+                "stream": {
+                    "type": "boolean"
                 }
             }
         },
@@ -610,6 +735,31 @@
                     "additionalProperties": {
                         "type": "string"
                     }
+                }
+            }
+        },
+        "registry.registryNodeDetail": {
+            "type": "object",
+            "required": [
+                "address",
+                "id",
+                "version"
+            ],
+            "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "metadata": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
+                },
+                "version": {
+                    "type": "string"
                 }
             }
         },
@@ -649,6 +799,20 @@
                 },
                 "version": {
                     "type": "string"
+                }
+            }
+        },
+        "registry.registryServiceNodes": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "nodes": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/registry.registryNodeDetail"
+                    }
                 }
             }
         },
